# omron-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
flatpak/: io.github.wildcommitter.OmronRs.metainfo.xml  io.github.wildcommitter.OmronRs.yml
src/: ble.rs  bluez_agent.rs  bps.rs  consts.rs  device_catalog.rs  device_config.rs  devices.rs  driver.rs  error.rs  lib.rs  main.rs  pairing.rs  racp.rs  record_parsers.rs  setup.rs  time_sync.rs  transport.rs
