[package]
name = "omron-rs"
version = "0.1.0"
edition = "2021"
description = "CLI to pair, connect, and read measurements from Omron BLE blood pressure monitors. Rust port of hass-omron."
license = "MIT"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
once_cell = "1"

[[bin]]
name = "omron"
path = "src/main.rs"
